@@ -979,6 +979,8 @@ Release 0.22.0 - Unreleased
 
     HADOOP-7772. javadoc the topology classes (stevel)
 
+    HADOOP-7786. Remove HDFS-specific config keys defined in FsConfig. (eli)
+
   OPTIMIZATIONS
 
     HADOOP-6884. Add LOG.isDebugEnabled() guard for each LOG.debug(..).
